k3s-userapps/devpod/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devpod
  labels:
    name: devpod
